--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* body */
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: "Abeezee", sans-serif;
 }
 
+/* header */
 header {
-    background-color: #885A5A
+    background-color: #885A5A;
+    font-family: "Sansita", system-ui;
 }
 
-
+/* main */
 main {
     flex: 1 0 auto;
     background-color: #CCA43B;
@@ -22,7 +28,7 @@ main {
     flex-direction: column;
 }
 
-
+/* footer */
 footer {
     background-color: #12100E;
     color: #EEE5E9;
