--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,18 @@ body {
 header {
     background-color: #885A5A;
     font-family: "Sansita", system-ui;
+    position: relative;
 }
 
 #cover-home {
     background: url("../images/climbing-cover-cropped.webp") center center/cover;
     width: 100%;
     height: 130px;
+}
+
+#navbar {
+    position: relative;
+    vertical-align: bottom;
 }
 
 /* main */
@@ -41,10 +47,24 @@ main {
     height: 100%;
     width: 100%;
     visibility: hidden;
+    display: flex;
+
 }
 
-#help-windows {
+#help-window {
+    background-color: rgba(18, 16, 14, 0.8);
+    padding: 20px;
+    width: min-content;
+    height: fit-content;
+    color: #EEE5E9;
+}
 
+/* closing "button" */
+#help-window a {
+    text-decoration: none;
+    color: #CCA43B;
+    float: right;
+    font-weight: bold;
 }
 
 #open-help-window:target {
@@ -65,11 +85,11 @@ main {
 }
 
 #got-message {
-
+    color: rgb(105, 162, 151);
 }
 
 #about {
-    
+    background-color: rgb(105, 162, 151);
 }
 
 #about-us img {
