style the header h1 and h2 elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,22 @@ header {
     font-family: "Sansita", system-ui;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
 }
 
 h1 {
-    padding: 20px;
+    margin-left: 20px;
+    height: fit-content;
+    width: 100%;
+    margin-top: 30px;
+    
+}
+
+h1 ~ h2 {
+    font-size: medium;
+    margin: 0 0 40px 20px;
+    height: fit-content;
+    width: 100%;
 }
 
 #cover-home {
@@ -139,7 +151,7 @@ main {
     padding: 20px;
 }
 
-h2 {
+main h2 {
     padding: 10px 0;
 }
 
