--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,13 +47,14 @@ h1 ~ h2 {
 #navbar {
     position: absolute;
     width: 100%;
+    height: 25px;
     align-self: flex-end;
     text-align: end;
     background-color: rgba(18, 16, 14, 0.8);
 }
 
 #navbar a {
-    color: #CCA43B ;
+    color: #edbd79;
     text-decoration: none;
     padding: 0 20px;
     
@@ -89,7 +90,7 @@ h1 ~ h2 {
 }
 
 input[type="submit"] {
-    background-color: #CCA43B;
+    background-color: #edbd79;
     padding: 5px;
     margin: 10px 0;
     border-radius: 5px;
@@ -98,7 +99,7 @@ input[type="submit"] {
 /* closing "button" */
 #help-window a {
     float: right; 
-    color: #CCA43B;
+    color: #edbd79;
 }
 
 #open-help-window:target {
@@ -135,24 +136,35 @@ input[type="submit"] {
 }
 
 #got-message a {
-    color: #CCA43B;
+    color: #edbd79;
     text-decoration: none;
     float: right;
 }
 /* main */
 main {
     flex: 1 0 auto;
-    background-color: #CCA43B;
+    background-color: #faf0df;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .main-content {
-    padding: 20px;
+    margin-right: 20px;
+    padding: 15px;
 }
 
 main h2 {
     padding: 10px 0;
+}
+
+#back-to-top {
+    text-decoration: none;
+    color: #12100E;
+    right: 5px;
+    position: fixed;
+    text-align: center;
+    bottom: 20px;
 }
 
 #about-us {
