add basic layout for advice html file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,13 +26,13 @@ header {
 h1 {
     margin-left: 20px;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 20px;
     
 }
 
 h1 ~ h2 {
     font-size: medium;
-    margin: 0 0 40px 20px;
+    margin: 0 0 50px 20px;
     width: 100%;
 }
 
@@ -40,6 +40,7 @@ h1 ~ h2 {
     background: url("../images/climbing-cover-cropped.webp") center center/cover;
     width: 100%;
     height: 130px;
+    background-position: 0 20%;
 }
 
 #navbar {
@@ -184,6 +185,14 @@ main h2 {
     margin-bottom: 10px;
 }
 
+/* advice section */
+
+#cover-advice {
+    background: url("../images/hanging.webp") center center/cover;
+    width: 100%;
+    height: 130px;
+}
+
 
 /* footer */
 footer {
@@ -202,7 +211,7 @@ footer {
 @media screen and (min-width:768px) {
     
     /* header */
-    #cover-home {
+    #cover-home, #cover-advice {
         height: 350px;
     }
 
@@ -243,5 +252,6 @@ footer {
         width: 50%;
         padding: 20px;
         margin: 0;
+        border-radius: 50px;
     }
 }
