--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,11 +193,15 @@ main h2 {
     height: 130px;
 }
 
-.shoes-image {
+#shoe-feat {
     width: 100%;
     height: 100%;
 }
 
+.shoes-image {
+    width: 100%;
+    height: 100%;
+}
 
 /* footer */
 footer {
