--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     font-family: "Abeezee", sans-serif;
+    color: #12100E;
 }
 
 /* header */
@@ -34,6 +35,20 @@ h1 ~ h2 {
     font-size: medium;
     margin: 0 0 50px 20px;
     width: 100%;
+}
+
+h3 {
+    padding: 20px 0 10px;
+    font-size: 130%;
+}
+
+h4 {
+    padding: 10px 0 10px;
+    font-size: large;
+}
+
+p a {
+    color: #12100E;
 }
 
 #cover-home {
@@ -192,16 +207,25 @@ main h2 {
     width: 100%;
     height: 130px;
 }
-
+ /* first picture in advice section */
 #shoe-feat {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 .shoes-image {
     width: 100%;
     height: 100%;
+    padding: 10px;
+    border-radius: 20px;
 }
+
+#shape {
+    padding-bottom: 0;
+}
+
+
 
 /* footer */
 footer {
