--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h3 {
 }
 
 h4 {
-    padding: 10px 0 10px;
+    padding: 10px 0;
     font-size: large;
 }
 
@@ -213,6 +213,8 @@ main h2 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    display: block;
+    margin: 15px auto;
 }
 
 .shoes-image {
@@ -297,5 +299,51 @@ footer {
     }
 
     /* advice section */
+    
+    h4 {
+        padding: 10px 12px;
+    }
+    
+    .features {
+        display: block;
+    }
+
+    #shoe-feat {
+        height: 70%;
+        width: 80%; 
+        
+    }
+
+    #neutral, #aggressive {
+        float: left;
+    }
+
+    #moderate {
+        float: right;
+    }
+
+    #moderate-heading {
+        text-align: end;
+    }
+
+    .shoes-image {
+        height: 350px;
+        width: 350px;
+    }
+
+    .shapes p {
+        padding: 15px;
+        margin: 12% 0;
+    }
+
+    .shapes h4 {
+        padding: 0 12px;
+    }
+
+    .features {
+        margin: 0 auto;
+    }
+
    
+
 }
