--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,28 +213,29 @@ main h2 {
 /* advice page */
 
 .article-selection {
-    text-align: left;
-    position: relative;
+    text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .clickable-img {
-    width: 10%;
-    height: 10%;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border-color: #12100E;
-    display: inline;
 }
 
 .article-selection a {
     text-decoration: none;
+    color: #12100E;
+    padding: 20px 0;
+
 }
 
 .text-aligned {
-    position: absolute;
     left: 11%;
-    
+    width: 100px;
 }
 
 /* first picture in in how to choose climbing shoe article */
