add content to climb-types.html file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header {
     display: flex;
     flex-wrap: wrap;
 }
-
+ /* general rules */
 h1 {
     margin-left: 20px;
     width: 100%;
@@ -36,6 +36,7 @@ h1~h2 {
     margin: 0 0 50px 20px;
     width: 100%;
 }
+
 
 h3 {
     padding: 20px 0 10px;
@@ -175,6 +176,7 @@ main {
 
 main h2 {
     padding: 10px 0;
+    line-height: 25px;
 }
 
 #back-to-top {
@@ -215,7 +217,6 @@ main h2 {
 .article-selection {
     text-align: center;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
@@ -230,11 +231,9 @@ main h2 {
     text-decoration: none;
     color: #12100E;
     padding: 20px 0;
-
 }
 
 .text-aligned {
-    left: 11%;
     width: 100px;
 }
 
@@ -269,9 +268,6 @@ main h2 {
     padding: 10px;
 }
 
-#conclusion {
-    margin-bottom: 20px;
-}
 
 /* footer */
 footer {
