--- a/assets/css/style-tablet.css
+++ b/assets/css/style-tablet.css
@@ -6,6 +6,7 @@
         height: 350px;
     }
 
+    /* general rules */
     h1 {
         font-size: 500%;
         margin-left: 20px;
@@ -19,8 +20,9 @@
         width: 100%;
     }
 
-    .img-2 {
-        height: 40px;
+    .navbar {
+        width: 100%;
+        height: fit-content;
     }
 
     .navbar a {
@@ -72,6 +74,31 @@
         border-radius: 50px;
     }
 
+    /* advice section */
+
+    
+    .clickable-img {
+        width: 50%;
+        height: auto;
+        border-radius: 50%;
+        border-color: #12100E;
+    }
+
+    .article-selection a {
+        text-decoration: none;
+        color: #12100E;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .text-aligned {
+        width: fit-content;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+
     /* shoe article section */
 
     h4 {
@@ -85,7 +112,6 @@
     #shoe-feat {
         height: 70%;
         width: 80%;
-
     }
 
     #neutral,
@@ -106,6 +132,10 @@
         width: 350px;
     }
 
+    .img-2 {
+        height: 40px;
+    }
+
     .shapes p {
         padding: 15px;
         margin: 12% 0;
@@ -118,4 +148,7 @@
     .features {
         margin: 0 auto;
     }
+
+    /* climbing types article */
+    
 }
