fix h3 in advice section for tablets

--- a/assets/css/style-tablet.css
+++ b/assets/css/style-tablet.css
@@ -102,6 +102,10 @@
         font-size: medium;
     }
 
+    .text-aligned h3 {
+        font-size: large;
+    }
+
     .text-aligned p {
         display: block;
     }
