--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -14,6 +14,23 @@
     }
 
 
+
+
+    /* advice page */
+
+    .clickable-img {
+        width: 20%;
+    }
+
+    .text-aligned h3 {
+        font-size: 25px;
+        padding-bottom: 10px;
+    }
+
+    .text-aligned p {
+        font-size: 20px;
+    }
+
     /* style for images on choosing shoe article */
     #moderate-heading {
         text-align: start;
@@ -29,7 +46,8 @@
         max-width: 750px;
     }
 
-    .shoe-shape, .img-2 {
+    .shoe-shape,
+    .img-2 {
         display: inline-block;
         margin: 0 30px;
     }
@@ -44,6 +62,5 @@
         text-align: justify;
     }
 
-    
 
 }
