--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -13,8 +13,19 @@
         text-shadow: 1px 1px 2px #12100E;
     }
 
+    .article-selection a:hover {
+        color: #885A5A;
+        transform: scale(1.05);
+        text-shadow: 1px 1px 2px #12100E;
+    }
 
+    .footer a:hover {
+        color: #885A5A;
+        transform: scale(1.1);
+        text-shadow: 1px 1px 2px #12100E;
+    }
 
+    
 
     /* advice page */
 
