--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -31,7 +31,19 @@
         text-shadow: 1px 1px 2px #12100E;
     }
 
-    
+    #got-message a:hover,
+    #help-window a:hover {
+        color: #885A5A;
+        transform: scale(1.1);
+        text-shadow: 1px 1px 2px #12100E;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #885A5A;
+        border-color: #885A5A;
+        transform: scale(1.1);
+        text-shadow: 1px 1px 2px #fbf6ee;
+    }
 
     /* advice page */
 
