--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,6 @@ h1 {
     margin-left: 20px;
     width: 100%;
     margin-top: 20px;
-
 }
 
 h1~h2 {
@@ -37,7 +36,6 @@ h1~h2 {
     margin: 0 0 50px 20px;
     width: 100%;
 }
-
 
 h3 {
     padding: 20px 0 10px;
@@ -53,7 +51,7 @@ p a {
     color: #12100E;
 }
 
-
+/* hero section */
 .cover-home {
     background: url("../images/climbing-cover-cropped.webp") center center/cover;
     width: 100%;
@@ -61,6 +59,7 @@ p a {
     background-position: 0 20%;
 }
 
+/* navbar properties */
 .navbar {
     position: absolute;
     width: 100%;
@@ -77,7 +76,13 @@ p a {
 
 }
 
-/* popup get help window */
+/* closing button for popup window*/
+#help-window a {
+    float: right;
+    color: #edbd79;
+}
+
+/* popup Get Help window */
 #open-help-window {
     position: fixed;
     z-index: 500;
@@ -114,16 +119,11 @@ input[type="submit"] {
     border-color: #edbd79;
 }
 
-/* closing "button" */
-#help-window a {
-    float: right;
-    color: #edbd79;
-}
-
 #open-help-window:target {
     visibility: visible;
 }
 
+/* feedback popup window */
 #success-message {
     position: fixed;
     z-index: 500;
@@ -206,8 +206,7 @@ main h2 {
     margin-bottom: 10px;
 }
 
-/* advice and article cover */
-
+/* advice and articles cover */
 .cover-advice {
     background: url("../images/hanging.webp") center center/cover;
     width: 100%;
@@ -215,7 +214,6 @@ main h2 {
 }
 
 /* general article rules for images */
-
 .article-img {
     width: 100%;
     height: 100%;
@@ -224,7 +222,6 @@ main h2 {
 }
 
 /* advice page */
-
 .article-selection {
     text-align: center;
     display: flex;
@@ -253,11 +250,12 @@ main h2 {
     font-size: 16px;
 }
 
+/* larger screens subtitle text */
 .text-aligned p {
     display: none;
 }
 
-/* first picture in in how to choose climbing shoe article */
+/* first picture on how to choose climbing shoe article */
 #shoe-feat {
     width: 100%;
     height: 100%;
@@ -266,18 +264,16 @@ main h2 {
     margin: 15px auto;
 }
 
-
-/* only desktop images in how to choose climbing shoe article */
+/* only desktop images on how to choose climbing shoe article */
 .img-2 {
     display: none;
 }
 
-/* list on how to decide in choosing shoe article */
+/* list on how to decide on choosing shoe article */
 #questions {
     list-style-type: none;
     padding: 10px;
 }
-
 
 /* footer */
 footer {
@@ -291,4 +287,3 @@ footer {
 .footer a {
     color: #EEE5E9;
 }
-
