--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -2,7 +2,7 @@
 
     /* max width so the content dont get to spread out */
     html {
-        max-width: 1300px;
+        max-width: 1200px;
         margin: 0 auto;
         background-color: #fbf6ee;
         align-content: center;
@@ -10,13 +10,9 @@
 
     /* popup windows */
 
-    #open-help-window, #success-message {
+    #open-help-window,
+    #success-message {
         width: 1300px;
-    }
-
-    /* back to top */
-    #back-to-top {
-        right: calc((100% - 1300px) / 2 + 10px);
     }
 
     /* hover effects */
@@ -118,5 +114,14 @@
     .shapes h4 {
         margin: 20px 0;
         text-align: justify;
+    }
+}
+
+
+@media screen and (min-width:1200px) {
+
+    /* back to top for screens larger than the max-width*/
+    #back-to-top {
+        right: calc((100% - 1200px) / 2 + 5px);
     }
 }
