--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,12 +280,15 @@ main h2 {
 footer {
     background-color: #12100E;
     display: flex;
-    font-size: 30px;
+    font-size: 1.5em;
     justify-content: space-around;
-    padding: 5px 0;
-
+    padding: 2em;
 }
 
 .footer, .footer a {
     color: #EEE5E9;
+}
+
+.footer p {
+    display: none;
 }
