--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     min-height: 100vh;
     font-family: "Abeezee", sans-serif;
     color: #12100E;
+    
 }
 
 /* header */
@@ -175,14 +176,15 @@ main h2 {
 }
 
 .main-content {
-    margin-right: 20px;
-    padding: 15px;
+    margin: 1em;
+    padding: 1em;
     text-align: justify;
-    line-height: 20px;
+    line-height: 1.5em;
 }
 
 .main-content p {
-    text-indent: 15px;
+    text-indent: 1em;
+    padding: 0.5em 0.5em;
 }
 
 #back-to-top {
@@ -204,7 +206,7 @@ main h2 {
     height: 100%;
     width: 100%;
     border-radius: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
 }
 
 /* advice and articles cover */
