--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -64,6 +64,10 @@
         padding-bottom: 10px;
     }
 
+    h3#multi-pitch-link {
+        text-align: justify;
+    }
+
     .text-aligned p {
         font-size: 20px;
     }
@@ -111,7 +115,8 @@
     }
 
     .shapes p,
-    .shapes h4 {
+    .shapes h4,
+    .shapes h3 {
         margin: 20px 0;
         text-align: justify;
     }
