--- a/assets/css/style-tablet.css
+++ b/assets/css/style-tablet.css
@@ -135,13 +135,14 @@
         text-align: end;
     }
 
-    h3#single-pitch {
-        padding-top: 20px;
+    h3#multi-pitch-link {
+        text-align: end;
     }
 
     .styles {
         display: flex;
         flex-wrap: wrap;
+        margin: 3em 0;
     }
 
     .styles h3 {
@@ -150,8 +151,7 @@
     }
 
     .styles p {
-        padding: 15px;
-        margin: 5% 0;
+        padding: 1em;
     }
 
     /* choosing shoe article */
@@ -173,9 +173,12 @@
         text-align: end;
     }
 
+    .shapes {
+        margin: 5em 0;
+    }
+    
     .shapes p {
-        padding: 15px;
-        margin: 8% 0;
+        padding: 1em;
     }
 
     .shapes h4 {
